--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B test --file pom.xml
+    - name: Publish Test Report
+      if: ${{ always() }}
+      uses: scacap/action-surefire-report@v1
