--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,10 @@ jobs:
           namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
 
       - name: Trigger Build Config
-        run: oc start-build ${{ env.build_config_name }} --wait
+        run: >-
+          oc start-build ${{ env.build_config_name }}
+            --commit ${{ needs.commit-version.outputs.github-release-version }}
+            --wait
 
       - name: Retag images
         run: |
