--- a/openshift/api-build.yml
+++ b/openshift/api-build.yml
@@ -14,6 +14,7 @@ objects:
       creationTimestamp: null
       labels:
         shared: "true"
+        app: ${APP}
       name: ${SOURCE_IMAGE_NAME}
     spec:
       lookupPolicy:
