--- a/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
+++ b/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
@@ -448,6 +448,9 @@ components:
           $ref: '#/components/schemas/VipsImpoundObj'
     VipsNoticeObj:
       type: object
+      required:
+        - noticeNo 
+        - noticeTypeCd
       properties:
         noticeNo:
           type: string
