--- a/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
+++ b/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
@@ -281,15 +281,16 @@ paths:
       - DfPayloads
       security:
         - basicAuth: []
-      summary: Retrieve a Digital Forms JSON payload (Impoundment or Prohibition). Response likely to change depending on content in DF schema. 
+      summary: Retrieve a payload from the Digital Forms staging table (Impoundment or Prohibition).  
       parameters:
       - name: noticeNo
         in: path
-        description: Digital Forms access key to Impoundment or Prohibition
+        description: Impoundment or Prohibition notice number. 
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
+          maxLength: 8
+          minLength: 8 
       - name: correlationId
         in: path
         schema:
@@ -304,10 +305,121 @@ paths:
                 $ref: '#/components/schemas/GetDFPayloadServiceResponse'
         401:
           $ref: '#/components/responses/401NotAuthorized'
-        403:
-          $ref: '#/components/responses/403Forbidden'
         404:
           $ref: '#/components/responses/404NotFound'
+        500:
+          $ref: '#/components/responses/500ServerError'
+    post:
+      tags:
+      - DfPayloads
+      security:
+        - basicAuth: []
+      summary: Create a new payload in the Digital Forms staging table (Impoundment or Prohibition).
+      parameters:
+        - in: path
+          name: correlationId
+          schema:
+            type: string
+          required: true
+        - in: path
+          name: noticeNo
+          description: Impoundment or Prohibition notice number. 
+          required: true
+          schema:
+            type: string
+            maxLength: 8
+            minLength: 8   
+      requestBody:
+        description: body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostDFPayloadServiceRequest'
+        required: true
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostDFPayloadServiceResponse'
+        500:
+          $ref: '#/components/responses/500ServerError'
+        401:
+          $ref: '#/components/responses/401NotAuthorized'        
+    put:
+      tags:
+      - DfPayloads
+      security:
+        - basicAuth: []
+      summary: Update a payload in the Digital Forms staging table (Impoundment or Prohibition).
+      parameters:
+        - in: path
+          name: correlationId
+          schema:
+            type: string
+          required: true
+        - in: path
+          name: noticeNo
+          description: Impoundment or Prohibition notice number. 
+          required: true
+          schema:
+            type: string
+            maxLength: 8
+            minLength: 8   
+      requestBody:
+        description: body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostDFPayloadServiceRequest'
+        required: true
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostDFPayloadServiceResponse'
+        401:
+          $ref: '#/components/responses/401NotAuthorized'           
+        404:
+          $ref: '#/components/responses/404NotFound'        
+        500:
+          $ref: '#/components/responses/500ServerError' 
+    delete:
+      tags:
+      - DfPayloads
+      security:
+        - basicAuth: []
+      summary: Delete a payload from the Digital Forms staging table (Impoundment or Prohibition).
+      parameters:
+        - in: path
+          name: correlationId
+          schema:
+            type: string
+          required: true
+        - in: path
+          name: noticeNo
+          description: Impoundment or Prohibition notice number. 
+          required: true
+          schema:
+            type: string
+            maxLength: 8
+            minLength: 8   
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostDFPayloadServiceResponse'
+        401:
+          $ref: '#/components/responses/401NotAuthorized'           
+        404:
+          $ref: '#/components/responses/404NotFound'        
+        500:
+          $ref: '#/components/responses/500ServerError'         
   /codetables/{correlationId}:
     get:
       tags:
@@ -1315,14 +1427,37 @@ components:
           type: string
     GetDFPayloadServiceResponse:
       type: object
-      description: Digital Forms Schema Payload Response. Likely to change depending on requirements of RSI Processors
+      description: Digital Forms Schema Payload Response
       properties:
         noticeNo: 
           type: string
-        noticeType:
+        noticeTypeCd:
           type: string
         payload:
           type: string
+        activeYN:
+          type: boolean
+        processedYN: 
+          type: boolean
+    PostDFPayloadServiceRequest:
+      type: object
+      description: Digital Forms Schema Payload Request
+      properties:
+        noticeNo: 
+          type: string
+        noticeTypeCd:
+          type: string
+        payload:
+          type: string
+        activeYN:
+          type: boolean
+        processedYN: 
+          type: boolean
+    PostDFPayloadServiceResponse:
+      type: object
+      properties:
+        status_message:
+          type: string          
     VipsImpoundmentBasicsObj:
       type: object
       properties:
