Updating the name for the image stream and build configs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
   promote_image:
     uses: SierraSystems/reusable-workflows/.github/workflows/openshift-tag-image.yml@main
     with:
-      image_stream_name: "vips-api"
+      image_stream_name: "digitalforms-viirp-api"
       source_image_tag: "${{ github.event.inputs.source_image_tag }}"
       image_tags: "${{ github.event.inputs.environment }}"
     secrets:
