Feature/GitHub workflows (#46)
* Adding main pipeline

* Adding deploy pipeline

* Overriding the default branch

* Adding release branch to push and fixing multi-line syntax

* Fixing image stream name

* targeting different BC and IS

* temporarily adding feature/github-workflows to build automatically

* Changing name schema for the Image Stream and Buyild config

* Updating the name for the image stream and build configs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ name: Main - Build Image and Push to Openshift Registry for Dev Deployment
 on:
   push:
     branches:
-      - master
-      - main
+      - release/*
   workflow_dispatch: {}
 
 jobs:
@@ -18,8 +17,8 @@ jobs:
     needs:
       - commit-version
     env:
-      build_config_name: "vips-api-build"
-      image_stream_name: "vips-api-image"
+      build_config_name: "digitalforms-viirp-api"
+      image_stream_name: "digitalforms-viirp-api"
       image_tags: "dev,${{ needs.commit-version.outputs.github-release-version }}"
 
     steps:
@@ -31,9 +30,9 @@ jobs:
           namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
 
       - name: Trigger Build Config
-        run: >-
-          oc start-build ${{ env.build_config_name }}
-            --commit ${{ needs.commit-version.outputs.github-release-version }}
+        run: |
+          oc start-build ${{ env.build_config_name }} \
+            --commit ${{ needs.commit-version.outputs.github-release-version }} \
             --wait
 
       - name: Retag images
@@ -50,7 +49,7 @@ jobs:
       - build-image
     uses: SierraSystems/reusable-workflows/.github/workflows/trivy-scan-openshift-image.yml@main
     with:
-      imagestream_name: "vips-api"
+      imagestream_name: "digitalforms-viirp-api"
       image_tag: "${{ needs.commit-version.outputs.github-release-version }}"
     secrets:
       openshift_namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
