--- a/digitalforms-api/src/main/resources/application.yml
+++ b/digitalforms-api/src/main/resources/application.yml
@@ -50,3 +50,8 @@ digitalforms:
     basePath: ${DIGITALFORMS_ORDS_BASEPATH}
     password: ${DIGITALFORMS_ORDS_PASSWORD}
     username: ${DIGITALFORMS_ORDS_USER}
+   
+# configure to use splunk logback configuration
+logging:
+  config:
+    classpath:logback-splunk.xml    
