Added basic authentication to all VI IRP API operations as well as authentication on Swagger UI using Spring web security framework

--- a/digitalforms-api/src/main/resources/application.yml
+++ b/digitalforms-api/src/main/resources/application.yml
@@ -50,4 +50,6 @@ digitalforms:
     basePath: ${DIGITALFORMS_ORDS_BASEPATH}
     password: ${DIGITALFORMS_ORDS_PASSWORD}
     username: ${DIGITALFORMS_ORDS_USER}
-   
+  basic-auth:
+    user: ${DIGITALFORMS_BASICAUTH_USER}
+    password: ${DIGITALFORMS_BASICAUTH_PASSWORD}
