--- a/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
+++ b/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
@@ -1368,6 +1368,12 @@ components:
     PostDFPayloadServiceRequest:
       type: object
       description: Digital Forms Schema Payload Request
+      required:
+        - noticeNo
+        - noticeTypeCd
+        - payload
+        - activeYN
+        - processedYN
       properties:
         noticeNo: 
           type: string
