--- a/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
+++ b/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
@@ -348,7 +348,47 @@ paths:
         500:
           $ref: '#/components/responses/500ServerError'
         401:
-          $ref: '#/components/responses/401NotAuthorized'            
+          $ref: '#/components/responses/401NotAuthorized'
+    put:
+      tags:
+      - DfPayloads
+      security:
+        - basicAuth: []
+      summary: Update a payload in the Digital Forms staging table (Impoundment or Prohibition).
+      parameters:
+        - in: path
+          name: correlationId
+          schema:
+            type: string
+          required: true
+        - in: path
+          name: noticeNo
+          description: Impoundment or Prohibition notice number. 
+          required: true
+          schema:
+            type: string
+            maxLength: 8
+            minLength: 8   
+      requestBody:
+        description: body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PutDFPayloadServiceRequest'
+        required: true
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostDFPayloadServiceResponse'
+        401:
+          $ref: '#/components/responses/401NotAuthorized'           
+        404:
+          $ref: '#/components/responses/404NotFound'        
+        500:
+          $ref: '#/components/responses/500ServerError'                       
   /codetables/{correlationId}:
     get:
       tags:
@@ -1353,7 +1393,7 @@ components:
           type: string
     GetDFPayloadServiceResponse:
       type: object
-      description: Digital Forms Schema Payload Response
+      description: Digital Forms Schema GET Response
       properties:
         noticeNo: 
           type: string
@@ -1367,7 +1407,7 @@ components:
           type: boolean
     PostDFPayloadServiceRequest:
       type: object
-      description: Digital Forms Schema Payload Request
+      description: Digital Forms Schema POST Request
       required:
         - noticeNo
         - noticeTypeCd
@@ -1416,6 +1456,16 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/VipsImpoundmentRegistrationObj'
+    PutDFPayloadServiceRequest:
+      type: object
+      description: Digital Forms Schema PUT Request
+      properties:
+        payload:
+          type: object
+        activeYN:
+          type: boolean
+        processedYN: 
+          type: boolean            
     VipsImpoundmentRegistrationObj:
       type: object
       properties:
