--- a/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
+++ b/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
@@ -388,7 +388,40 @@ paths:
         404:
           $ref: '#/components/responses/404NotFound'        
         500:
-          $ref: '#/components/responses/500ServerError'                       
+          $ref: '#/components/responses/500ServerError'
+    delete:
+      tags:
+      - DfPayloads
+      security:
+        - basicAuth: []
+      summary: Delete a payload from the Digital Forms staging table (Impoundment or Prohibition).
+      parameters:
+        - in: path
+          name: correlationId
+          schema:
+            type: string
+          required: true
+        - in: path
+          name: noticeNo
+          description: Impoundment or Prohibition notice number. 
+          required: true
+          schema:
+            type: string
+            maxLength: 8
+            minLength: 8   
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostDFPayloadServiceResponse'
+        401:
+          $ref: '#/components/responses/401NotAuthorized'           
+        404:
+          $ref: '#/components/responses/404NotFound'        
+        500:
+          $ref: '#/components/responses/500ServerError'                                  
   /codetables/{correlationId}:
     get:
       tags:
