--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>ca.bc.gov.open</groupId>
 			<artifactId>digitalforms-ords-client</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.1</version>
 			<scope>compile</scope>
 		</dependency>
 		
