--- a/openshift/dev-deploy-params.yml
+++ b/openshift/dev-deploy-params.yml
@@ -1,9 +1,5 @@
-NAME: vips-api
-COMPONENT: deployment
-SUFFIX: -dev
+NAME: digitalforms-viirp-api
 NAMESPACE: c220ad-dev
 IMAGE_NAMESPACE: c220ad-tools
-BUILD_CONFIG_SUFFIX: build
-BUILD_VERSION: 25
 SECRET1_NAME: digitalforms-api
 SECRET2_NAME: df-vips-integration-api
