--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Update Deployment
         run: |
-          oc template \
+          oc process \
             -f openshift/api-build.yml \
             --param-file openshift/de-deploy-params.yml \
             --param IMAGE_TAG=${{ needs.commit-version.outputs.github-release-version }}
