--- a/openshift/dev-deploy-params.yml
+++ b/openshift/dev-deploy-params.yml
@@ -3,3 +3,4 @@ NAMESPACE: c220ad-dev
 IMAGE_NAMESPACE: c220ad-tools
 SECRET1_NAME: digitalforms-api
 SECRET2_NAME: df-vips-integration-api
+IMAGE_TAG: dev
