touching up the deploy-params files

--- a/openshift/api-deploy.yml
+++ b/openshift/api-deploy.yml
@@ -23,6 +23,7 @@ parameters:
   description: Memory upper limit
   value: 500Mi
 - name: IMAGE_NAMESPACE
+  value: c220ad-tools
 - name: IMAGE_TAG
   required: true
 - name: SECRET1_NAME
