DF-2222_3 first commit after ORDS completion.

--- a/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
+++ b/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
@@ -1490,6 +1490,8 @@ components:
       type: object
       description: Digital Forms Schema PUT Request
       properties:
+        noticeTypeCd:
+          type: string
         payload:
           type: object
         activeYN:
