--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -19,6 +19,6 @@ jobs:
         cache: maven
     - name: Run Tests
       run: mvn -B test --file pom.xml
-    - name: Publish Test Report
-      if: ${{ always() }}
-      uses: scacap/action-surefire-report@v1
+#    - name: Publish Test Report
+#      if: ${{ always() }}
+#      uses: scacap/action-surefire-report@v1
