--- a/openshift/api-build.yml
+++ b/openshift/api-build.yml
@@ -7,31 +7,6 @@ metadata:
     iconClass: icon-java
   name: ${NAME}-build-template
 objects:
-  - apiVersion: image.openshift.io/v1
-    kind: ImageStream
-    metadata:
-      annotations: null
-      creationTimestamp: null
-      labels:
-        shared: "true"
-        app: ${APP}
-      name: ${SOURCE_IMAGE_NAME}
-    spec:
-      lookupPolicy:
-        local: false
-      tags:
-      - annotations:
-          openshift.io/imported-from: registry.access.redhat.com/ubi8/openjdk-11:1.13-1.1655306377
-        from:
-          kind: DockerImage
-          name: registry.access.redhat.com/ubi8/openjdk-11:1.13-1.1655306377
-        generation: null
-        importPolicy: {}
-        name: ${SOURCE_IMAGE_TAG}
-        referencePolicy:
-          type: "Local"
-    status:
-      dockerImageRepository: ""
   - kind: ImageStream
     apiVersion: v1
     metadata:
@@ -43,9 +18,9 @@ objects:
     metadata:
       name: ${NAME}
       labels:
-        app: ${APP}
-        component: ${NAME}${BUILD_CONFIG_SUFFIX}
-        name: ${NAME}${BUILD_CONFIG_SUFFIX}
+        app: ${NAME}
+        component: ${NAME}
+        name: ${NAME}
     spec:
       source:
         type: Git
@@ -63,35 +38,16 @@ objects:
           cpu: 1
           memory: 4Gi
       strategy:
-        type: Source
-        sourceStrategy:
-          from:
-            kind: ${KIND_OF_IMAGE}
-            namespace: ${SOURCE_IMAGE_NAMESPACE}
-            name: ${SOURCE_IMAGE_NAME}:${SOURCE_IMAGE_TAG}
-          env:
-            - name: MAVEN_ARGS
-              value: -e -Popenshift -Dcom.redhat.xpaas.repo.jbossorg -Dfabric8.skip=true -DskipTests
-            - name: MAVEN_ARGS_APPEND
-              value: --also-make
-            - name: ARTIFACT_DIR
-              value: target/
-            - name: MAVEN_S2I_ARTIFACT_DIRS
-              value: digitalforms-api/target/
-            # - name: MAVEN_LOCAL_REPO
-            #   value: /home/jboss/.m2/repository
+        type: Docker
+        dockerStrategy:
+          dockerfilePath: Dockerfile
       output:
         to:
           kind: ImageStreamTag
-          name: ${NAME}-image:${VERSION}
+          name: ${NAME}:${VERSION}
       # triggers:
       #   - type: ConfigChange
 parameters:
-  - name: APP
-    displayName: App
-    description: The application name assigned to all of the objects defined in this template.  You should keep this as default unless your know what your doing.
-    required: true
-    # value: vips-api
   - name: NAME
     displayName: Name
     description: The name assigned to all of the objects defined in this template.  You should keep this as default unless your know what your doing.
@@ -102,11 +58,6 @@ parameters:
     description: Application version number
     required: true
     # value: "1.1"
-  - name: SUFFIX
-    displayName: Application name suffix
-    description: Application name suffix
-    required: true
-    # value: "-dev"
   - name: SOURCE_REPOSITORY_URL
     displayName: Git Repo URL
     description: The URL to your GIT repo, don't use the this default unless your just experimenting.
@@ -120,26 +71,3 @@ parameters:
     displayName: Git Reference
     description: The git reference or branch.
     required: true
-  - name: KIND_OF_IMAGE
-    displayName: Kind of the Source Image
-    required: true
-    description: The kind of the source image.
-    value: ImageStreamTag
-  - name: SOURCE_IMAGE_NAME
-    displayName: Source Image Name
-    description: The name of the source image.
-    required: true
-    # value: vips-api-buildimage
-  - name: SOURCE_IMAGE_TAG
-    displayName: Source Image Tag
-    description: The tag of the source image.
-    required: true
-    # value: "1.0"
-  - name: SOURCE_IMAGE_NAMESPACE
-    displayName: Namespace
-    required: true
-    description: The Namespace where the ImageStream resides.
-  - name: BUILD_CONFIG_SUFFIX
-    displayName: Build Config Suffix
-    required: true
-    description: Suffix_for_buildconfig
