--- a/digitalforms-api-specification/pom.xml
+++ b/digitalforms-api-specification/pom.xml
@@ -4,23 +4,30 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.3</version>
+        <relativePath /> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>ca.bc.gov.open.digitalformsapi.viirp</groupId>
     <artifactId>digitalforms-api-specification</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.2.0</version>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
 
         <swagger-annotations-version>1.6.6</swagger-annotations-version>
         <springdoc-openapi-ui-version>1.6.9</springdoc-openapi-ui-version>
         <springfox-swagger-version>2.10.0</springfox-swagger-version>
         <jersey-version>3.1.0-M8</jersey-version>
-        <jackson-version>[2.13.4.1,)</jackson-version>
+        <jackson-version>2.15.2</jackson-version>
         <woodstox-core-version>6.4.0</woodstox-core-version>
         <jodatime-version>2.11.1</jodatime-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <datatype-threetenbp-version>2.12.5</datatype-threetenbp-version>
-        <spring-boot-version>2.7.3</spring-boot-version>
+        <spring-boot-version>3.1.3</spring-boot-version>
         <junit-version>4.13.2</junit-version>
         <migbase64-version>2.2</migbase64-version>
         <jackson-databind-nullable>0.2.3</jackson-databind-nullable>
@@ -33,11 +40,11 @@
             <artifactId>swagger-annotations</artifactId>
             <version>${swagger-annotations-version}</version>
         </dependency>
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger-ui</artifactId>
-		    <version>${springfox-swagger-version}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox-swagger-version}</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
@@ -83,11 +90,11 @@
             <artifactId>jackson-datatype-joda</artifactId>
             <version>${jackson-version}</version>
         </dependency>
-		<dependency>
-		    <groupId>com.fasterxml.woodstox</groupId>
-		    <artifactId>woodstox-core</artifactId>
-		    <version>${woodstox-core-version}</version>
-		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.woodstox</groupId>
+            <artifactId>woodstox-core</artifactId>
+            <version>${woodstox-core-version}</version>
+        </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
@@ -115,16 +122,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot-version}</version>
         </dependency>
-        <dependency> 
-    		<groupId>org.springframework.boot</groupId> 
-    		<artifactId>spring-boot-starter-validation</artifactId>
-    		<version>${spring-boot-version}</version> 
-		</dependency>
         <dependency>
-        	<groupId>org.springdoc</groupId>
-	      	<artifactId>springdoc-openapi-ui</artifactId>
-	      	<version>${springdoc-openapi-ui-version}</version>
-		</dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring-boot-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc-openapi-ui-version}</version>
+        </dependency>
         <dependency>
             <groupId>com.github.joschi.jackson</groupId>
             <artifactId>jackson-datatype-threetenbp</artifactId>
@@ -136,10 +143,10 @@
             <version>${jackson-databind-nullable}</version>
         </dependency>
         <dependency>
-		  	<groupId>javax.annotation</groupId>
-		  	<artifactId>javax.annotation-api</artifactId>
-		  	<version>${javax-annotation-version}</version>
-		</dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.19</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -147,7 +154,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>6.1.0</version>
+                <version>6.6.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -160,7 +167,10 @@
                             <modelPackage>ca.bc.gov.open.digitalformsapi.viirp.model</modelPackage>
                             <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                             <configOptions>
-                            	<useTags>true</useTags>
+                                <validateSpec>false</validateSpec>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <useJakartaEe>true</useJakartaEe>
+                                <useTags>true</useTags>
                                 <delegatePattern>true</delegatePattern>
                             </configOptions>
                         </configuration>
@@ -171,10 +181,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                     <proc>none</proc>
                 </configuration>
             </plugin>
