--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -3,24 +3,22 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.3</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
+	
 	<groupId>ca.bc.gov.open</groupId>
-	<artifactId>digitalforms-api</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
-	<name>digitalforms-api</name>
+	<artifactId>digitalforms-viirp-api</artifactId>
+	<version>0.0.2</version>
+	<name>digitalforms-viirp-api</name>
 	<description>RoadSafetyBC DigitalForms API (VI/IRP)</description>
+	
 	<properties>
 		<java.version>17</java.version>
-		<!--
-		<jackson-version>[2.13.4.1,)</jackson-version>
-		<spring-security-core-version>5.7.5</spring-security-core-version>
-		-->
-		<snakeyaml.version>2.2</snakeyaml.version>
 	</properties>
 
 	<repositories>
@@ -43,6 +41,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,20 +62,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
 		</dependency>
 		
-		
-
 		<!-- VIPS ORDS library dependency linked submodule (Shared with DPS and 
 			Digital Forms Reviews) -->
 		<dependency>
 			<groupId>ca.bc.gov.open</groupId>
 			<artifactId>jag-vips-client</artifactId>
-			<version>0.1.1</version>
+			<version>0.1.2</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -80,8 +82,10 @@
 		<dependency>
 			<groupId>ca.bc.gov.open</groupId>
 			<artifactId>digitalforms-ords-client</artifactId>
-			<version>0.1.1</version>
+			<version>0.1.2</version>
+			<!--
 			<scope>compile</scope>
+			-->
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework/org.springframework.beans -->
@@ -101,12 +105,7 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 		</dependency>
-		
-		<dependency>
-    		<groupId>jakarta.xml.bind</groupId>
-    		<artifactId>jakarta.xml.bind-api</artifactId>
-		</dependency>
-		
+
 		<!-- Splunk -->
 		<dependency>
 			<groupId>com.splunk.logging</groupId>
@@ -120,11 +119,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -156,8 +157,8 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
+           
         </dependency>
-        
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
@@ -167,7 +168,20 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
         </dependency>
-
+        
+        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
