Working Swagger and operation set after update to J17 and SB 3.1.3

--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -51,7 +51,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
+		
+		<!-- spring-security-core -->
+		<!--
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		</dependency>
+		-->
+		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
@@ -132,10 +140,9 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- spring-security-core -->
 		<dependency>
-		    <groupId>org.springframework.security</groupId>
-		    <artifactId>spring-security-core</artifactId>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	
 		<!--  Jackson  -->
@@ -181,7 +188,7 @@
 		    <groupId>commons-codec</groupId>
 		    <artifactId>commons-codec</artifactId>
 		</dependency>
-		
+	
 	</dependencies>
 
 	<build>
