--- a/digitalforms-api-specification/pom.xml
+++ b/digitalforms-api-specification/pom.xml
@@ -12,7 +12,7 @@
         <java.version>17</java.version>
 
         <swagger-annotations-version>2.2.19</swagger-annotations-version>
-        <springdoc-openapi-ui-version>1.6.9</springdoc-openapi-ui-version>
+        <springdoc-openapi-version>2.2.0</springdoc-openapi-version>
         <springfox-swagger-version>2.10.0</springfox-swagger-version>
         <jersey-version>3.1.0-M8</jersey-version>
         <jackson-version>[2.13.4.1,)</jackson-version>
@@ -28,6 +28,13 @@
     </properties>
 
     <dependencies>
+		
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc-openapi-version}</version>
+		</dependency>
+		
 		<!--
         <dependency>
             <groupId>io.swagger</groupId>
@@ -35,18 +42,34 @@
             <version>${swagger-annotations-version}</version>
         </dependency>
         -->
-        <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
+        
 		<dependency>
 		    <groupId>io.swagger.core.v3</groupId>
 		    <artifactId>swagger-annotations</artifactId>
 		    <version>${swagger-annotations-version}</version>
 		</dependency>
-        
+		
+		<dependency>
+    		<groupId>io.swagger.core.v3</groupId>
+    		<artifactId>swagger-core</artifactId>
+    		<version>${swagger-annotations-version}</version>
+		</dependency>
+		
+		<!--
+		<dependency>
+		    <groupId>io.swagger.core.v3</groupId>
+		    <artifactId>swagger-models</artifactId>
+		    <version>${swagger-annotations-version}</version>
+		</dependency>
+        -->
+        <!--
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>${springfox-swagger-version}</version>
 		</dependency>
+		-->
+		
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
@@ -129,11 +152,13 @@
     		<artifactId>spring-boot-starter-validation</artifactId>
     		<version>${spring-boot-version}</version> 
 		</dependency>
+		<!--
         <dependency>
         	<groupId>org.springdoc</groupId>
 	      	<artifactId>springdoc-openapi-ui</artifactId>
 	      	<version>${springdoc-openapi-ui-version}</version>
 		</dependency>
+		-->
         <dependency>
             <groupId>com.github.joschi.jackson</groupId>
             <artifactId>jackson-datatype-threetenbp</artifactId>
@@ -149,6 +174,13 @@
 		  	<artifactId>javax.annotation-api</artifactId>
 		  	<version>${javax-annotation-version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+		<dependency>
+		    <groupId>jakarta.validation</groupId>
+		    <artifactId>jakarta.validation-api</artifactId>
+		    <version>3.1.0-M1</version>
+		</dependency>
+
 	</dependencies>
 
     <build>
