--- a/digitalforms-api-specification/pom.xml
+++ b/digitalforms-api-specification/pom.xml
@@ -10,21 +10,18 @@
 
     <properties>
         <java.version>17</java.version>
-
-        <swagger-annotations-version>2.2.19</swagger-annotations-version>
+        <swagger-version>2.2.19</swagger-version>
         <springdoc-openapi-version>2.2.0</springdoc-openapi-version>
-        <springfox-swagger-version>2.10.0</springfox-swagger-version>
-        <jersey-version>3.1.0-M8</jersey-version>
-        <jackson-version>[2.13.4.1,)</jackson-version>
-        <woodstox-core-version>6.4.0</woodstox-core-version>
-        <jodatime-version>2.11.1</jodatime-version>
-        <maven-plugin-version>1.0.0</maven-plugin-version>
+        <jersey-version>3.1.3</jersey-version>
+        <jackson-version>2.15.2</jackson-version>
+        <woodstox-core-version>6.5.1</woodstox-core-version>
+        <jodatime-version>2.12.5</jodatime-version>
         <datatype-threetenbp-version>2.12.5</datatype-threetenbp-version>
         <spring-boot-version>3.1.3</spring-boot-version>
         <junit-version>4.13.2</junit-version>
         <migbase64-version>2.2</migbase64-version>
-        <jackson-databind-nullable>0.2.3</jackson-databind-nullable>
-        <javax-annotation-version>1.3.2</javax-annotation-version>
+        <jackson-databind-nullable>0.2.6</jackson-databind-nullable>
+        <javax-annotation-api-version>1.3.2</javax-annotation-api-version>
     </properties>
 
     <dependencies>
@@ -34,131 +31,117 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc-openapi-version}</version>
 		</dependency>
-		
-		<!--
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${swagger-annotations-version}</version>
-        </dependency>
-        -->
-        
+		       
 		<dependency>
 		    <groupId>io.swagger.core.v3</groupId>
 		    <artifactId>swagger-annotations</artifactId>
-		    <version>${swagger-annotations-version}</version>
+		    <version>${swagger-version}</version>
 		</dependency>
 		
 		<dependency>
     		<groupId>io.swagger.core.v3</groupId>
     		<artifactId>swagger-core</artifactId>
-    		<version>${swagger-annotations-version}</version>
+    		<version>${swagger-version}</version>
 		</dependency>
-		
-		<!--
-		<dependency>
-		    <groupId>io.swagger.core.v3</groupId>
-		    <artifactId>swagger-models</artifactId>
-		    <version>${swagger-annotations-version}</version>
-		</dependency>
-        -->
-        <!--
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger-ui</artifactId>
-		    <version>${springfox-swagger-version}</version>
-		</dependency>
-		-->
 		
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jersey-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
             <version>${jersey-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>${jersey-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-base</artifactId>
             <version>${jackson-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>${jackson-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
             <version>${jackson-version}</version>
         </dependency>
+        
 		<dependency>
 		    <groupId>com.fasterxml.woodstox</groupId>
 		    <artifactId>woodstox-core</artifactId>
 		    <version>${woodstox-core-version}</version>
 		</dependency>
+		
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${jodatime-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.brsanthu</groupId>
             <artifactId>migbase64</artifactId>
             <version>${migbase64-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring-boot-version}</version>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot-version}</version>
         </dependency>
+        
         <dependency> 
     		<groupId>org.springframework.boot</groupId> 
     		<artifactId>spring-boot-starter-validation</artifactId>
     		<version>${spring-boot-version}</version> 
 		</dependency>
-		<!--
-        <dependency>
-        	<groupId>org.springdoc</groupId>
-	      	<artifactId>springdoc-openapi-ui</artifactId>
-	      	<version>${springdoc-openapi-ui-version}</version>
-		</dependency>
-		-->
+
         <dependency>
             <groupId>com.github.joschi.jackson</groupId>
             <artifactId>jackson-datatype-threetenbp</artifactId>
@@ -172,9 +155,9 @@
         <dependency>
 		  	<groupId>javax.annotation</groupId>
 		  	<artifactId>javax.annotation-api</artifactId>
-		  	<version>${javax-annotation-version}</version>
+		  	<version>${javax-annotation-api-version}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+		
 		<dependency>
 		    <groupId>jakarta.validation</groupId>
 		    <artifactId>jakarta.validation-api</artifactId>
@@ -213,10 +196,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.12.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                     <proc>none</proc>
                 </configuration>
             </plugin>
